# VuMake

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md
.github/workflows/: build.yml
assets/gltf/: Cube.glb
assets/materials/: tmp.json
assets/meshes/: cube.glb  monka.glb
assets/shaders/: Common.hlsl  Common.slang  GPass_frag.slang  GPass_frag.spv  GPass_vert.slang  GPass_vert.spv  PBR_frag.slang  PBR_frag.spv  basic_frag.slang  basic_frag.spv  basic_vert.slang  common.slang  compile_all.py  compile_hlsl.bat  compile_slang.bat  deferred_frag.slang  deferred_frag.spv  frag.hlsl  frag.slang  frag.spv  fragmentFromApi.spv  screenTri_vert.slang  screenTri_vert.spv  shader.frag  shader.vert  shader_PBR_frag.slang  shader_basic_frag.slang  shader_basic_vert.slang  shader_basic_vert.spv  shader_common.slang  shader_screenTri_vert.slang  shader_screenTri_vert.spv  vert.hlsl  vert.slang  vert.spv  vertexFromApi.spv
buildUtils/: Functions.cmake
build_utils/: ClangBuildAnalyzer  Functions.cmake  build_log  fix_includes.sh  include-what-you-use  iwyu.out
build_utils/C#_BuildRun/: main.csx  run.ps1
docs/: coding_style.txt  engine_defaults.txt  plans.txt
shaders/: compile.bat  frag.spv  shader.frag  shader.vert  triangle.gltf  vert.spv
src/: Common.h  DeviceUtils.h  EngineContext.h  GraphicsPipeline.h  Main.cpp  Mesh.cpp  Mesh.h  MonkeScene.h  RenderPass.h  Scene0.h  Shader.h  SlangTest.h  SwapChain.cpp  SwapChain.h  Vu.h  VuBuffer.cpp  VuBuffer.h  VuContext.h  VuDepthStencil.h  VuDeviceUtils.h  VuGraphicsPipeline.h  VuInit.h  VuRenderer.Init.cpp  VuRenderer.cpp  VuRenderer.h  VuShader.h  VuSwapChain.cpp  VuSwapChain.h  VuSync.h  VuTexture.cpp  VuTexture.h  VuTypes.h  VuUtils.h  VulkanInitalizers.h  VulkanTypes.h  VulkanUtils.h  pch.h
src/01_InnerCore/: IndexAllocator.cpp  IndexAllocator.h  ScopeTimer.h  TypeDefs.h  VuLogger.h  zero_optional.h
src/02_OuterCore/: CollectionUtils.h  Color32.cpp  Color32.h  Common.cpp  Common.h  FixedString.h  HeaderOnlyIncludes.cpp  SanityCheck.h  VuCommon.cpp  VuCommon.h  VuConfig.h  VuCtx.h  VuIO.h  VuPlatform.h
src/03_Mantle/: VuBuffer.cpp  VuBuffer.h  VuCommandBuffer.cpp  VuCommandBuffer.h  VuCommon.cpp  VuCommon.h  VuCreateUtils.cpp  VuCreateUtils.h  VuDeferredRenderSpace.cpp  VuDeferredRenderSpace.h  VuDevice.cpp  VuDevice.h  VuDevice2.cpp  VuDevice2.h  VuGraphicsPipeline.cpp  VuGraphicsPipeline.h  VuImage.cpp  VuImage.h  VuInstance.cpp  VuInstance.h  VuMemoryAllocator.cpp  VuMemoryAllocator.h  VuPhysicalDevice.cpp  VuPhysicalDevice.h  VuRenderPass.cpp  VuRenderPass.h  VuSampler.cpp  VuSampler.h  VuSurface.cpp  VuSurface.h  VuSwapChain.cpp  VuSwapChain.h  VuSwapChain2.cpp  VuSwapChain2.h  VuSync.h  VuTypes.h  VuUtils.cpp  VuUtils.h
src/04_Crust/: VuAssetLoader.cpp  VuAssetLoader.h  VuDeferredRenderSpace.cpp  VuDeferredRenderSpace.h  VuDevice.cpp  VuDevice.h  VuMaterial.cpp  VuMaterial.h  VuMesh.cpp  VuMesh.h  VuRenderer.Init.cpp  VuRenderer.cpp  VuRenderer.h  VuShader.cpp  VuShader.h  VuSwapChain.cpp  VuSwapChain.h  old.cpp  old.h
src/08_LangUtils/: IndexAllocator.h  ScopeTimer.h  TypeDefs.h  VuLogger.cpp  VuLogger.h  VuPoolManager.h  VuPools.h
src/10_Core/: CollectionUtils.h  Color32.cpp  Color32.h  Common.cpp  Common.h  FixedString.h  HeaderOnlyIncludes.cpp  SanityCheck.h  VuCommon.cpp  VuCommon.h  VuConfig.h  VuCtx.h  VuIO.h  VuLogger.cpp  VuPlatform.h  VuScopeTimer.h  pch.h
src/10_ECS-ECF/: Component.cpp  Component.h  GameObject.h
src/11_Components/: Camera.h  Components.h  Transform.h
src/11_Config/: VuConfig.h  VuCtx.h
src/12_Systems/: Systems.cpp  Systems.h
src/12_VuMakeCore/: VuBuffer.cpp  VuBuffer.h  VuCommon.cpp  VuCommon.h  VuCreateUtils.cpp  VuCreateUtils.h  VuDeviceAllocator.cpp  VuDeviceAllocator.h  VuGraphicsPipeline.cpp  VuGraphicsPipeline.h  VuImage.cpp  VuImage.h  VuInstance.h  VuPools.h  VuRenderPass.h  VuSampler.cpp  VuSampler.h  VuSync.h  VuTypes.h  VuUtils.cpp  VuUtils.h
src/13_Scenes/: Scene0.h  Scene_GLTF_Load.h
src/14_VK/: VuAssetLoader.h  VuAssetManager.h  VuBuffer.cpp  VuBuffer.h  VuDevice.cpp  VuDevice.h  VuGraphicsPipeline.cpp  VuGraphicsPipeline.h  VuImage.cpp  VuImage.h  VuMaterial.cpp  VuMaterial.h  VuMaterialDataPool.cpp  VuMaterialDataPool.h  VuMesh.h  VuPools.h  VuRenderPass.h  VuRenderer.Init.cpp  VuRenderer.cpp  VuRenderer.h  VuResourceManager.cpp  VuResourceManager.h  VuSampler.cpp  VuSampler.h  VuShader.cpp  VuShader.h  VuSwapChain.cpp  VuSwapChain.h  VuTypes.h  VuUtils.h
src/14_VuMake/: VuAssetLoader.h  VuDevice.cpp  VuDevice.h  VuMaterial.cpp  VuMaterial.h  VuMaterialDataPool.cpp  VuMaterialDataPool.h  VuMesh.h  VuRenderPass.h  VuRenderer.Init.cpp  VuRenderer.cpp  VuRenderer.h  VuShader.cpp  VuShader.h  VuSwapChain.cpp  VuSwapChain.h
src/19_ECS-ECF/: Component.h  GameObject.cpp  GameObject.h
src/20_Components/: Camera.h  Components.h  Transform.h
src/21_Systems/: Systems.h
src/30_Scenes/: Scene0.h  pch.h
src/common/: Common.cpp  Common.h  Vu.h  VuConfig.h  VuCtx.h  VuMath.h  pch.h
src/components/: Camera.h  Components.h  Transform.h
src/ecf/: Component.h  GameObject.h
src/material/: VuAssetManager.h  VuGlobalSetManager.h  VuHandle.h  VuMaterial.cpp  VuMaterial.h  VuMaterialDataPool.cpp  VuMaterialDataPool.h  VuPools.h  VuResourceManager.cpp  VuResourceManager.h  VuShader.cpp  VuShader.h
src/math/: VuFloat.h  VuFloat2.cpp  VuFloat3.cpp  VuFloat4.cpp  VuFloat4x4.cpp  VuFloat4x4.h  VuMath.cpp  VuMath.h  VuMathUtils.h
src/render/: Mesh.cpp  Mesh.h  VuAssetLoader.h  VuBuffer.cpp  VuBuffer.h  VuDepthStencil.h  VuDevice.cpp  VuDevice.h  VuGraphicsPipeline.cpp  VuGraphicsPipeline.h  VuImage.cpp  VuImage.h  VuInitializers.h  VuMaterial.h  VuMaterialData.h  VuMaterialDataPool.h  VuMesh.cpp  VuMesh.h  VuPipelineLayout.h  VuRenderPass.h  VuRenderer.Init.cpp  VuRenderer.cpp  VuRenderer.h  VuResourcePool.h  VuSampler.cpp  VuSampler.h  VuShader.h  VuSwapChain.cpp  VuSwapChain.h  VuSync.h  VuTexture.cpp  VuTexture.h  VuTypes.h  VuUtils.cpp  VuUtils.h
src/systems/: Systems.h  (+2 more)
test/: CMakeLists.txt  Test1.cpp  VuListTest1.cpp
(+46 files in other folders)
